Add basic layout

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi</h1>
-    <Script src="assets/javascript/index.js">
-
-    </Script>
+<div id="main-container">
+    <div id="display">
+        <p>display</p>
+    </div>
+    <div id="buttons"></div>
+    <div id="equals">
+        <p>equals</p>
+    </div>
+</div>
+<Script src="assets/javascript/index.js">
+</Script>
 </body>
 </html>
