--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <div id="main-container">
     <div id="display">
-        <p>display</p>
+        <p id="display-text">0</p>
     </div>
     <div id="buttons"></div>
     <div id="equals">
-        <p>equals</p>
+        <p>=</p>
     </div>
 </div>
 <Script src="assets/javascript/index.js">
